src/tests/ci/assignment_5_functions/valid/08_function_float_params.c
float average(float a, float b) {
    return (a + b) / 2.0;
}

int main() {
    float result = average(10.0, 20.0);
    return 0;
}