src/tests/ci/assignment_5_functions/invalid_syntax/05_function_missing_type.c
my_func(int a, int b) {  // Missing return type
    return a + b;
}

int main() {
    return 0;
}